--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width,initial-scale=1" />
         <title>複合モジュール_テーブル（水平）</title>
+
+        <!-- css -->
         <link rel="stylesheet" href="style.css" />
+
+        <!-- favicon/webclipicon -->
+        <link rel="shortcut icon" href="favicon.ico" />
+        <link rel="apple-touch-icon" href="webclip.png" />
 
         <!-- google fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -40,3 +46,4 @@
         </table>
     </div>
     </body>
+</html>
